6-services/my-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: secure-app
  policyTypes:
  # Whitebox model => a selected pod will be completely lockdown...
  # unless we provide policies regarding ingress and/or egress.
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          # only pods having this label will be able to query my policy pod.
          allow-access: "true"
    ports:
    - protocol: TCP
      port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            # only pods having this label will be able to query my policy pod.
            allow-access: "true"
      ports:
      - protocol: TCP
        port: 80
